# nyx-node

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  LICENCE  LibNyxNodeConfig.cmake.in  NyxNodeConfig.cmake.in  README.md  clean.sh  library.json  prepare.py  setup.py  sonar-project.properties
.doxygen/: header.html
.github/workflows/: deploy.yml
docs/: Doxyfile  DoxygenLayout.xml  doxygen-awesome.css
docs/md/: demo.md  index.md  protocol.md  python.md
docs/rst/: indi.rst
nyx_node/: __init__.py  bind.py  ffi.py  node.py  obj.py  xml.py
nyx_node/indi/: __init__.py  enums.py  helpers.py  indi_blob.py  indi_del_property.py  indi_light.py  indi_message.py  indi_number.py  indi_stream.py  indi_switch.py  indi_text.py  utils.py
nyx_node/json/: __init__.py  json_boolean.py  json_dict.py  json_list.py  json_null.py  json_number.py  json_string.py
nyx_node/utils/: __init__.py  addr.py  base64.py  hash.py
spec/: nyx.xsd
src/: alloc.c  base.c  base64.c  dom.c  indi.c  indi_base.h  indi_base_internal.h  indi_base_schema.h  indi_node.h  indi_node_internal.h  indi_node_schema.h  json.c  log.c  mac.c  mqtt.c  node.c  nss.c  nyx_node.h  nyx_node.hpp  nyx_node_internal.h  nyx_node_schema.h  object.c  redis.c  server.c  stream.c  string_builder.c  transform_json_to_xml.c  transform_xml_to_json.c  utf8.c  validation.c  xml.c  xml_stream.c
src/indi/: blob.c  format.c  helpers.c  indi_blob.c  indi_del_property.c  indi_light.c  indi_message.c  indi_number.c  indi_stream.c  indi_switch.c  indi_text.c  light.c  number.c  switch.c  text.c  utils.c
src/json/: boolean.c  dict.c  json_boolean.c  json_dict.c  json_list.c  json_null.c  json_number.c  json_string.c  list.c  null.c  number.c  string.c
src/json_structs/: indi_dict.c
src/mongoose/: mongoose.c  mongoose.h
src/nyx/: indi_light.c  indi_number.c  indi_switch.c
src/parsers/: json.c  xml.c
src/schema/: indi.xsd  nyx.xsd
src/stack/: arduino.cpp  arduino.h  arduino_stack.cpp  mongoose.c  mongoose.h  mongoose_config.h  mongoose_stack.c  mongoose_stack.h  rpi.cpp  rpi.h
src/stacks/: arduino.cpp  mongoose.c
src/structs/: indi_boolean.c  indi_dict.c  indi_list.c  indi_null.c  indi_number.c  indi_string.c
src/utils/: addr.c  base64.c  hash.c  hash32.c  utf8.c  zlib.c
test/: check_json.c  check_xml.c  demo.c  demo.py  test1.c  test2.c  valid_json.sh  valid_xml.sh
